--- a/P3Benchmark/P3Benchmark.csproj
+++ b/P3Benchmark/P3Benchmark.csproj
@@ -8,6 +8,7 @@
     <ProjectReference Include="..\PasPasPas.Infrastructure\PasPasPas.Infrastructure.csproj" />
     <ProjectReference Include="..\Paspaspas.Options\PasPasPas.Options.csproj" />
     <ProjectReference Include="..\PasPasPas.Parsing\PasPasPas.Parsing.csproj" />
+    <ProjectReference Include="..\PasPasPas.Runtime\PasPasPas.Runtime.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
