--- a/P3SyntaxTreeViewer/packages.config
+++ b/P3SyntaxTreeViewer/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="SharpFloatLibrary" version="1.0.1" targetFramework="net471" />
   <package id="System.Diagnostics.Debug" version="4.3.0" targetFramework="net461" />
   <package id="System.Globalization" version="4.3.0" targetFramework="net461" />
   <package id="System.Globalization.Extensions" version="4.3.0" targetFramework="net461" />
