--- a/PasPasPas.Runtime/PasPasPas.Runtime.csproj
+++ b/PasPasPas.Runtime/PasPasPas.Runtime.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PasPasPas.Global\PasPasPas.Global.csproj" />
+    <ProjectReference Include="..\PasPasPas.Infrastructure\PasPasPas.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
