--- a/PasPasPas.Typings/PasPasPas.Typings.csproj
+++ b/PasPasPas.Typings/PasPasPas.Typings.csproj
@@ -17,6 +17,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PasPasPas.Global\PasPasPas.Global.csproj" />
+    <ProjectReference Include="..\PasPasPas.Infrastructure\PasPasPas.Infrastructure.csproj" />
     <ProjectReference Include="..\PasPasPas.Parsing\PasPasPas.Parsing.csproj" />
   </ItemGroup>
 
