--- a/PasPasPas.Global/PasPasPas.Global.csproj
+++ b/PasPasPas.Global/PasPasPas.Global.csproj
@@ -1,29 +1,33 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <Import Project="../Common.targets" />
+    <Import Project="../Common.targets" />
 
-  <PropertyGroup>
-    <TargetFramework>$(PasPasPasTargetFramework)</TargetFramework>
-    <Description>Global types and interfaces for the pas³ project.</Description>
-    <VersionPrefix>1.0.0</VersionPrefix>
-    <VersionSuffix>0</VersionSuffix>
-    <Company>$(PasPasPasCompany)</Company>
-    <Copyright>$(PasPasPasCopyright)</Copyright>
-    <Product>PasPasPas.Global</Product>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>$(PasPasPasTargetFramework)</TargetFramework>
+        <Description>Global types and interfaces for the pas³ project.</Description>
+        <VersionPrefix>1.0.0</VersionPrefix>
+        <VersionSuffix>0</VersionSuffix>
+        <Company>$(PasPasPasCompany)</Company>
+        <Copyright>$(PasPasPasCopyright)</Copyright>
+        <Product>PasPasPas.Global</Product>
+        <CodeAnalysisRuleSet>../PasPasPas.ruleset</CodeAnalysisRuleSet>
+    </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <LangVersion>$(PasPasPasCsLanguageVersion)</LangVersion>
-    <DocumentationFile>bin\Release\$(PasPasPasTargetFramework)\global.xml</DocumentationFile>
-  </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+        <LangVersion>$(PasPasPasCsLanguageVersion)</LangVersion>
+        <DocumentationFile>bin\Release\$(PasPasPasTargetFramework)\global.xml</DocumentationFile>
+    </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <LangVersion>$(PasPasPasCsLanguageVersion)</LangVersion>
-    <DocumentationFile>bin\Release\$(PasPasPasTargetFramework)\global.xml</DocumentationFile>
-  </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+        <LangVersion>$(PasPasPasCsLanguageVersion)</LangVersion>
+        <DocumentationFile>bin\Release\$(PasPasPasTargetFramework)\global.xml</DocumentationFile>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="SharpFloatLibrary" Version="1.0.1" />
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="SharpFloatLibrary" Version="1.0.1" />
+        <PackageReference Include="ErrorProne.NET" Version="0.1.5898.41180" />
+        <PackageReference Include="ErrorProne.NET.Structs" Version="0.1.0" />
+        <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.6.0" />
+    </ItemGroup>
 
 </Project>
