small extensions for type casting

--- a/PasPasPas.Runtime/PasPasPas.Runtime.csproj
+++ b/PasPasPas.Runtime/PasPasPas.Runtime.csproj
@@ -19,6 +19,7 @@
   <ItemGroup>
     <ProjectReference Include="..\PasPasPas.Global\PasPasPas.Global.csproj" />
     <ProjectReference Include="..\PasPasPas.Infrastructure\PasPasPas.Infrastructure.csproj" />
+    <ProjectReference Include="..\PasPasPas.Typings\PasPasPas.Typings.csproj" />
   </ItemGroup>
 
 </Project>
