--- a/PasPasPasTests/PasPasPasTests.csproj
+++ b/PasPasPasTests/PasPasPasTests.csproj
@@ -23,9 +23,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PasPasPas.Api\PasPasPas.Api.csproj" />
+    <ProjectReference Include="..\PasPasPas.Global\PasPasPas.Globals.csproj" />
     <ProjectReference Include="..\PasPasPas.Infrastructure\PasPasPas.Infrastructure.csproj" />
     <ProjectReference Include="..\Paspaspas.Options\PasPasPas.Options.csproj" />
     <ProjectReference Include="..\PasPasPas.Parsing\PasPasPas.Parsing.csproj" />
+    <ProjectReference Include="..\PasPasPas.Runtime\PasPasPas.Runtime.csproj" />
     <ProjectReference Include="..\PasPasPas.Typings\PasPasPas.Typings.csproj" />
   </ItemGroup>
 
