--- a/PasPasPas.Infrastructure/PasPasPas.Infrastructure.csproj
+++ b/PasPasPas.Infrastructure/PasPasPas.Infrastructure.csproj
@@ -29,5 +29,11 @@
         <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.6.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Reference Include="System.Collections.Immutable">
+        <HintPath>..\..\..\..\..\..\Program Files\dotnet\sdk\NuGetFallbackFolder\microsoft.netcore.app\2.0.0\ref\netcoreapp2.0\System.Collections.Immutable.dll</HintPath>
+      </Reference>
+    </ItemGroup>
+
 
 </Project>
