--- a/.editorconfig
+++ b/.editorconfig
@@ -22,12 +22,12 @@ dotnet_sort_system_directives_first                                = true
 csharp_style_var_for_built_in_types	                               = true : suggestion
 csharp_style_var_when_type_is_apparent                             = true : suggestion
 csharp_style_var_elsewhere                                         = true : suggestion
-csharp_style_expression_bodied_methods		                       = when_possible : suggestion
-csharp_style_expression_bodied_constructors	                       = when_possible : suggestion
-csharp_style_expression_bodied_operators	                       = when_possible : suggestion
-csharp_style_expression_bodied_properties	                       = when_possible : suggestion
-csharp_style_expression_bodied_indexers		                       = when_possible : suggestion
-csharp_style_expression_bodied_accessors	                       = when_possible : suggestion
+csharp_style_expression_bodied_methods		                       = true : suggestion
+csharp_style_expression_bodied_constructors	                       = true : suggestion
+csharp_style_expression_bodied_operators	                       = true : suggestion
+csharp_style_expression_bodied_properties	                       = true : suggestion
+csharp_style_expression_bodied_indexers		                       = true : suggestion
+csharp_style_expression_bodied_accessors	                       = true : suggestion
 csharp_style_pattern_matching_over_is_with_cast_check              = true : suggestion
 csharp_style_pattern_matching_over_as_with_null_check              = true : suggestion
 csharp_style_inlined_variable_declaration                          = true : suggestion
@@ -37,19 +37,25 @@ csharp_style_pattern_local_over_anonymous_function                 = true : sugg
 csharp_style_throw_expression                                      = true : suggestion
 csharp_style_conditional_delegate_call                             = true : suggestion
 csharp_preferred_modifier_order                                    = public,private,protected,internal,static,extern,new,virtual,abstract,sealed,override,readonly,unsafe,volatile,async:suggestion
-csharp_indent_case_contents                                        = true
-csharp_indent_switch_labels                                        = true
-csharp_indent_labels                                               = one_less_than_current
-csharp_space_after_cast                                            = false
-csharp_space_after_keywords_in_control_flow_statements             = true
-csharp_space_between_method_declaration_parameter_list_parentheses = false
-csharp_space_between_method_call_parameter_list_parentheses        = false
-csharp_preserve_single_line_statements                             = false
-csharp_preserve_single_line_blocks                                 = true
+csharp_indent_case_contents                                        = true: suggestion
+csharp_indent_switch_labels                                        = true: suggestion
+csharp_indent_labels                                               = one_less_than_current: suggestion
+csharp_space_after_cast                                            = false: suggestion
+csharp_space_after_keywords_in_control_flow_statements             = true: suggestion
+csharp_space_between_method_declaration_parameter_list_parentheses = false: suggestion
+csharp_space_between_method_call_parameter_list_parentheses        = false: suggestion
+csharp_preserve_single_line_statements                             = false: suggestion
+csharp_preserve_single_line_blocks                                 = true: suggestion
 csharp_prefer_braces                                               = false : suggestion
-csharp_new_line_before_open_brace                                  = none
-csharp_new_line_before_else                                        = true
-csharp_new_line_before_catch                                       = true
-csharp_new_line_before_finally                                     = true
-csharp_new_line_before_members_in_object_initializers              = false
-csharp_new_line_before_members_in_anonymous_types                  = false
+csharp_new_line_before_open_brace                                  = none: suggestion
+csharp_new_line_before_else                                        = true: suggestion
+csharp_new_line_before_catch                                       = true: suggestion
+csharp_new_line_before_finally                                     = true: suggestion
+csharp_new_line_before_members_in_object_initializers              = false: suggestion
+csharp_new_line_before_members_in_anonymous_types                  = false: suggestion
+dotnet_style_parentheses_in_arithmetic_binary_operators            = never_if_unnecessary : suggestion
+dotnet_style_parentheses_in_relational_binary_operators            = never_if_unnecessary : suggestion
+dotnet_style_parentheses_in_other_binary_operators                 = never_if_unnecessary : suggestion
+dotnet_style_parentheses_in_other_operators                        = never_if_unnecessary : suggestion
+dotnet_style_prefer_conditional_expression_over_assignment         = true: suggestion
+dotnet_style_prefer_conditional_expression_over_return             = true : suggestion
