--- a/PasPasPas.Infrastructure/PasPasPas.Infrastructure.csproj
+++ b/PasPasPas.Infrastructure/PasPasPas.Infrastructure.csproj
@@ -27,6 +27,7 @@
         <PackageReference Include="ErrorProne.NET" Version="0.1.5898.41180" />
         <PackageReference Include="ErrorProne.NET.Structs" Version="0.1.0" />
         <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.6.1" />
+        <PackageReference Include="System.Collections.Immutable" Version="1.5.0" />
     </ItemGroup>
 
     <ItemGroup>
