--- a/DesktopSampleRunner/DesktopSampleRunner.csproj
+++ b/DesktopSampleRunner/DesktopSampleRunner.csproj
@@ -38,6 +38,7 @@
       <HintPath>..\packages\SharpFloatLibrary.1.0.1\lib\netstandard2.0\SharpFloat.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Collections.Immutable, Version=1.2.3.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
     <Reference Include="System.Xml.Linq" />
