--- a/DesktopSampleRunner/DesktopSampleRunner.csproj
+++ b/DesktopSampleRunner/DesktopSampleRunner.csproj
@@ -8,7 +8,7 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>DesktopSampleRunner</RootNamespace>
     <AssemblyName>DesktopSampleRunner</AssemblyName>
-    <TargetFrameworkVersion>v4.7.1</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <TargetFrameworkProfile />
@@ -33,6 +33,27 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
+    <DebugSymbols>true</DebugSymbols>
+    <OutputPath>bin\x64\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <DebugType>full</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <LangVersion>latest</LangVersion>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
+    <OutputPath>bin\x64\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <Optimize>true</Optimize>
+    <DebugType>pdbonly</DebugType>
+    <PlatformTarget>x64</PlatformTarget>
+    <ErrorReport>prompt</ErrorReport>
+    <CodeAnalysisRuleSet>MinimumRecommendedRules.ruleset</CodeAnalysisRuleSet>
+    <Prefer32Bit>true</Prefer32Bit>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="SharpFloat, Version=1.0.1.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\SharpFloatLibrary.1.0.1\lib\netstandard2.0\SharpFloat.dll</HintPath>
@@ -48,30 +69,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="..\SampleRunner\Program.cs">
-      <Link>Program.cs</Link>
-    </Compile>
-    <Compile Include="..\SampleRunner\Scenarios\BufferedTokenize.cs">
-      <Link>Scenarios\BufferedTokenize.cs</Link>
-    </Compile>
-    <Compile Include="..\SampleRunner\Scenarios\CreateAst.cs">
-      <Link>Scenarios\CreateAst.cs</Link>
-    </Compile>
-    <Compile Include="..\SampleRunner\Scenarios\ParseFile.cs">
-      <Link>Scenarios\ParseFile.cs</Link>
-    </Compile>
-    <Compile Include="..\SampleRunner\Scenarios\ReadFile.cs">
-      <Link>Scenarios\ReadFile.cs</Link>
-    </Compile>
-    <Compile Include="..\SampleRunner\Scenarios\SampleMode.cs">
-      <Link>Scenarios\SampleMode.cs</Link>
-    </Compile>
-    <Compile Include="..\SampleRunner\Scenarios\TokenizeFile.cs">
-      <Link>Scenarios\TokenizeFile.cs</Link>
-    </Compile>
-    <Compile Include="..\SampleRunner\Scenarios\TypeAnnotateFile.cs">
-      <Link>Scenarios\TypeAnnotateFile.cs</Link>
-    </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="..\PasPasPas.Api\src\**\*.cs">
       <Link>%(RecursiveDir)%(FileName)</Link>
@@ -92,6 +89,9 @@
       <Link>%(RecursiveDir)%(FileName)</Link>
     </Compile>
     <Compile Include="..\PasPasPas.Typings\src\**\*.cs">
+      <Link>%(RecursiveDir)%(FileName)</Link>
+    </Compile>
+    <Compile Include="..\SampleRunner\src\**\*.cs">
       <Link>%(RecursiveDir)%(FileName)</Link>
     </Compile>
   </ItemGroup>
