--- a/.editorconfig
+++ b/.editorconfig
@@ -57,5 +57,5 @@ dotnet_style_parentheses_in_arithmetic_binary_operators            = never_if_un
 dotnet_style_parentheses_in_relational_binary_operators            = never_if_unnecessary : suggestion
 dotnet_style_parentheses_in_other_binary_operators                 = never_if_unnecessary : suggestion
 dotnet_style_parentheses_in_other_operators                        = never_if_unnecessary : suggestion
-dotnet_style_prefer_conditional_expression_over_assignment         = true: suggestion
-dotnet_style_prefer_conditional_expression_over_return             = true : suggestion
+dotnet_style_prefer_conditional_expression_over_assignment         = false: suggestion
+dotnet_style_prefer_conditional_expression_over_return             = false : suggestion
