--- a/PasPasPas.Api/PasPasPas.Api.csproj
+++ b/PasPasPas.Api/PasPasPas.Api.csproj
@@ -25,8 +25,11 @@
 
   <ItemGroup>
     <PackageReference Include="ErrorProne.NET" Version="0.1.5898.41180" />
-    <PackageReference Include="ErrorProne.NET.Structs" Version="0.1.0" />
-    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.6.1" />
+    <PackageReference Include="ErrorProne.NET.Structs" Version="0.1.1.10" />
+    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.6.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
