--- a/P3SyntaxTreeViewer/packages.config
+++ b/P3SyntaxTreeViewer/packages.config
@@ -1,5 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="ErrorProne.NET" version="0.1.5898.41180" targetFramework="net471" />
+  <package id="ErrorProne.NET.Structs" version="0.1.1.11" targetFramework="net471" developmentDependency="true" />
+  <package id="Microsoft.CodeAnalysis.FxCopAnalyzers" version="2.6.2" targetFramework="net471" developmentDependency="true" />
+  <package id="Microsoft.CodeQuality.Analyzers" version="2.6.2" targetFramework="net471" developmentDependency="true" />
+  <package id="Microsoft.NetCore.Analyzers" version="2.6.2" targetFramework="net471" developmentDependency="true" />
+  <package id="Microsoft.NetFramework.Analyzers" version="2.6.2" targetFramework="net471" developmentDependency="true" />
   <package id="SharpFloatLibrary" version="1.0.1" targetFramework="net471" />
   <package id="System.Buffers" version="4.5.0" targetFramework="net471" />
   <package id="System.Collections.Immutable" version="1.5.0" targetFramework="net471" />
@@ -11,4 +17,5 @@
   <package id="System.Runtime.Extensions" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
   <package id="System.Runtime.InteropServices" version="4.3.0" targetFramework="net461" requireReinstallation="true" />
   <package id="System.Threading" version="4.3.0" targetFramework="net461" />
+  <package id="Text.Analyzers" version="2.6.2" targetFramework="net471" developmentDependency="true" />
 </packages>
