--- a/PasPasPas.Building/PasPasPas.Building.csproj
+++ b/PasPasPas.Building/PasPasPas.Building.csproj
@@ -31,7 +31,10 @@
 
   <ItemGroup>
     <PackageReference Include="ErrorProne.NET" Version="0.1.5898.41180" />
-    <PackageReference Include="ErrorProne.NET.Structs" Version="0.1.1.10" />
+    <PackageReference Include="ErrorProne.NET.Structs" Version="0.1.1.11">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.6.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
