--- a/PasPasPas.Global/PasPasPas.Globals.csproj
+++ b/PasPasPas.Global/PasPasPas.Globals.csproj
@@ -26,7 +26,10 @@
     <ItemGroup>
         <PackageReference Include="SharpFloatLibrary" Version="1.0.1" />
         <PackageReference Include="ErrorProne.NET" Version="0.1.5898.41180" />
-        <PackageReference Include="ErrorProne.NET.Structs" Version="0.1.1.10" />
+        <PackageReference Include="ErrorProne.NET.Structs" Version="0.1.1.11">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+        </PackageReference>
         <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.6.2">
           <PrivateAssets>all</PrivateAssets>
           <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
