small changes in project definition

--- a/PasPasPas.Global/PasPasPas.Globals.csproj
+++ b/PasPasPas.Global/PasPasPas.Globals.csproj
@@ -9,7 +9,7 @@
         <VersionSuffix>0</VersionSuffix>
         <Company>$(PasPasPasCompany)</Company>
         <Copyright>$(PasPasPasCopyright)</Copyright>
-        <Product>PasPasPas.Global</Product>
+        <Product>PasPasPas.Globals</Product>
         <CodeAnalysisRuleSet>../PasPasPas.Ruleset</CodeAnalysisRuleSet>
     </PropertyGroup>
 
@@ -25,14 +25,14 @@
 
     <ItemGroup>
         <PackageReference Include="SharpFloatLibrary" Version="1.0.1" />
-        <PackageReference Include="ErrorProne.NET" Version="0.1.5898.41180" />
+        <PackageReference Include="ErrorProne.NET" Version="0.1.5898.41180">
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
         <PackageReference Include="ErrorProne.NET.Structs" Version="0.1.2">
-          <PrivateAssets>all</PrivateAssets>
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+            <PrivateAssets>all</PrivateAssets>
         </PackageReference>
         <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.6.2">
-          <PrivateAssets>all</PrivateAssets>
-          <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+            <PrivateAssets>all</PrivateAssets>
         </PackageReference>
     </ItemGroup>
 
