--- a/PasPasPas.Runtime/PasPasPas.Runtime.csproj
+++ b/PasPasPas.Runtime/PasPasPas.Runtime.csproj
@@ -1,37 +1,45 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <Import Project="../Common.targets" />
+    <Import Project="../Common.targets" />
 
-  <PropertyGroup>
-    <TargetFramework>$(PasPasPasTargetFramework)</TargetFramework>
-  </PropertyGroup>
+    <PropertyGroup>
+        <TargetFramework>$(PasPasPasTargetFramework)</TargetFramework>
+        <Description>Small runtime for the pas³ project.</Description>
+        <VersionPrefix>1.0.0</VersionPrefix>
+        <VersionSuffix>0</VersionSuffix>
+        <Company>$(PasPasPasCompany)</Company>
+        <Copyright>$(PasPasPasCopyright)</Copyright>
+        <Product>PasPasPas.Runtime</Product>
+        <CodeAnalysisRuleSet>../PasPasPas.Ruleset</CodeAnalysisRuleSet>
+    </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <LangVersion>$(PasPasPasCsLanguageVersion)</LangVersion>
-    <DocumentationFile>bin\Release\$(PasPasPasTargetFramework)\runtime.xml</DocumentationFile>
-  </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+        <LangVersion>$(PasPasPasCsLanguageVersion)</LangVersion>
+        <DocumentationFile>bin\Release\$(PasPasPasTargetFramework)\runtime.xml</DocumentationFile>
+    </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-    <LangVersion>$(PasPasPasCsLanguageVersion)</LangVersion>
-    <DocumentationFile>bin\Release\$(PasPasPasTargetFramework)\runtime.xml</DocumentationFile>
-  </PropertyGroup>
+    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+        <LangVersion>$(PasPasPasCsLanguageVersion)</LangVersion>
+        <DocumentationFile>bin\Release\$(PasPasPasTargetFramework)\runtime.xml</DocumentationFile>
+    </PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="ErrorProne.NET" Version="0.1.5898.41180" />
-    <PackageReference Include="ErrorProne.NET.Structs" Version="0.1.2">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-    </PackageReference>
-    <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.6.2">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
-    </PackageReference>
-  </ItemGroup>
+    <ItemGroup>
+        <PackageReference Include="ErrorProne.NET" Version="0.1.5898.41180">
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
+        <PackageReference Include="ErrorProne.NET.Structs" Version="0.1.2">
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.6.2">
+            <PrivateAssets>all</PrivateAssets>
+        </PackageReference>
+        <PackageReference Include="System.Collections.Immutable" Version="1.5.0" />
+    </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\PasPasPas.Global\PasPasPas.Globals.csproj" />
-    <ProjectReference Include="..\PasPasPas.Infrastructure\PasPasPas.Infrastructure.csproj" />
-    <ProjectReference Include="..\PasPasPas.Typings\PasPasPas.Typings.csproj" />
-  </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\PasPasPas.Global\PasPasPas.Globals.csproj" />
+        <ProjectReference Include="..\PasPasPas.Infrastructure\PasPasPas.Infrastructure.csproj" />
+        <ProjectReference Include="..\PasPasPas.Typings\PasPasPas.Typings.csproj" />
+    </ItemGroup>
 
 </Project>
