--- a/PasPasPas.Runtime/PasPasPas.Runtime.csproj
+++ b/PasPasPas.Runtime/PasPasPas.Runtime.csproj
@@ -33,6 +33,7 @@
         <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.6.2">
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
+        <PackageReference Include="SharpFloatLibrary" Version="1.0.2" />
         <PackageReference Include="System.Collections.Immutable" Version="1.5.0" />
     </ItemGroup>
 
