extended test cases

--- a/PasPasPas.Global/PasPasPas.Globals.csproj
+++ b/PasPasPas.Global/PasPasPas.Globals.csproj
@@ -24,14 +24,15 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="SharpFloatLibrary" Version="1.0.3" />
-        <PackageReference Include="ErrorProne.NET" Version="0.1.5898.41180">
-            <PrivateAssets>all</PrivateAssets>
+        <PackageReference Include="ErrorProne.NET.CoreAnalyzers" Version="0.1.2">
+          <PrivateAssets>all</PrivateAssets>
+          <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
         </PackageReference>
+        <PackageReference Include="SharpFloatLibrary" Version="1.0.3" />
         <PackageReference Include="ErrorProne.NET.Structs" Version="0.1.2">
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
-        <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.6.3">
+        <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.1">
             <PrivateAssets>all</PrivateAssets>
         </PackageReference>
         <PackageReference Include="System.Collections.Immutable" Version="1.5.0" />
