--- a/PasPasPas.AssemblyBuilder/PasPasPas.AssemblyBuilder.csproj
+++ b/PasPasPas.AssemblyBuilder/PasPasPas.AssemblyBuilder.csproj
@@ -36,4 +36,14 @@
         <PackageReference Include="System.Collections.Immutable" Version="1.5.0" />
     </ItemGroup>
 
+    <ItemGroup>
+        <ProjectReference Include="..\PasPasPas.Parsing\PasPasPas.Parsing.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <Reference Include="Lokad.ILPack">
+            <HintPath>lib\Lokad.ILPack.dll</HintPath>
+        </Reference>
+    </ItemGroup>
+
 </Project>
