--- a/PasPasPas.Building/PasPasPas.Building.csproj
+++ b/PasPasPas.Building/PasPasPas.Building.csproj
@@ -24,6 +24,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\PasPasPas.Api\PasPasPas.Api.csproj" />
         <ProjectReference Include="..\PasPasPas.Infrastructure\PasPasPas.Infrastructure.csproj" />
         <ProjectReference Include="..\Paspaspas.Options\PasPasPas.Options.csproj" />
         <ProjectReference Include="..\PasPasPas.Parsing\PasPasPas.Parsing.csproj" />
