--- a/PasPasPas.Typings/PasPasPas.Typings.csproj
+++ b/PasPasPas.Typings/PasPasPas.Typings.csproj
@@ -14,4 +14,8 @@
         <ProjectReference Include="..\PasPasPas.Parsing\PasPasPas.Parsing.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="src\OpCodes\" />
+    </ItemGroup>
+
 </Project>
