--- a/PasPasPas.Typings/PasPasPas.Typings.csproj
+++ b/PasPasPas.Typings/PasPasPas.Typings.csproj
@@ -9,6 +9,10 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <None Remove="src\Simple\BooleanType.cs~RFb6d4cf4.TMP" />
+    </ItemGroup>
+
+    <ItemGroup>
         <ProjectReference Include="..\PasPasPas.Global\PasPasPas.Globals.csproj" />
         <ProjectReference Include="..\PasPasPas.Infrastructure\PasPasPas.Infrastructure.csproj" />
         <ProjectReference Include="..\PasPasPas.Parsing\PasPasPas.Parsing.csproj" />
