--- a/PasPasPas.Desktop/packages.config
+++ b/PasPasPas.Desktop/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Nullable" version="1.2.1" targetFramework="net48" developmentDependency="true" />
   <package id="SharpFloatLibrary" version="1.0.4" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Collections.Immutable" version="1.7.1" targetFramework="net472" />
