fixed test cases

--- a/PasPasPas.Desktop/PasPasPas.Desktop.csproj
+++ b/PasPasPas.Desktop/PasPasPas.Desktop.csproj
@@ -23,8 +23,8 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <LangVersion>8.0</LangVersion>
-	<Nullable>enable</Nullable>
-	<RunAnalyzers>false</RunAnalyzers>
+    <Nullable>enable</Nullable>
+    <RunAnalyzers>false</RunAnalyzers>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -34,10 +34,13 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <LangVersion>8.0</LangVersion>
-	<Nullable>enable</Nullable>	
-	<RunAnalyzers>false</RunAnalyzers>
+    <Nullable>enable</Nullable>
+    <RunAnalyzers>false</RunAnalyzers>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.Bcl.HashCode, Version=1.0.0.0, Culture=neutral, PublicKeyToken=cc7b13ffcd2ddd51, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.Bcl.HashCode.1.1.0\lib\net461\Microsoft.Bcl.HashCode.dll</HintPath>
+    </Reference>
     <Reference Include="SharpFloat, Version=1.0.4.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\SharpFloatLibrary.1.0.4\lib\netstandard2.0\SharpFloat.dll</HintPath>
     </Reference>
