--- a/DesktopSampleRunner/packages.config
+++ b/DesktopSampleRunner/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Microsoft.Bcl.HashCode" version="1.1.0" targetFramework="net48" />
   <package id="Nullable" version="1.2.1" targetFramework="net48" developmentDependency="true" />
   <package id="SharpFloatLibrary" version="1.0.4" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
